*Empty MediaWiki Message*

--- a/འབྲུག་བཞི་པའི་རྟོགས་བརྗོད།.mw
+++ b/འབྲུག་བཞི་པའི་རྟོགས་བརྗོད།.mw
@@ -114,8 +114,84 @@
 
 མཇུག་ར་ གོང་ལུ་བཀོད་མི་ཚུ་ལུ་བལྟ་བ་ཅིན་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ནང་ དང་པ་དཀོན་མཆོག་གསུམ་གྱི་བཀའ་དྲིན་དང་ གཉིས་པ་དྲིན་ཅན་ཕམ་ མི་དབང་རིམ་བྱོན་ཚུ། ལྷག་པར་དུ་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ གྲོང་གསེབ་ཀྱི་གཡུས་སྒོ་ཚུ་དང་ ཁྲོམ་གྱི་བར་ན་དབྱེ་བ་མེད་པར་ འདྲ་མཉམ་སྦེ་གོང་འཕེལ་གྱི་ལས་སྣ་ཚུ་བརྩམས་ཏེ་ དངོས་སུ་མཛད་ཡོདཔ་ཨིན། དེང་སང་གི་དུས་ལུ་ཡང་ འབྲུག་རྒྱལ་ཁབ་ནང་ ཡར་རྒྱས་གོང་འཕེལ་གྱི་ལས་འཆར་ག་ཅི་ར་འབད་རུང་ གྲོང་གསེབ་ཡར་རྒྱས་གཏང་ནིའི་དོན་ལུ་དང་ སོ་ནམ་ཐོན་ཤུགས་ཡར་དྲག་གཏང་ཐབས་ལུ་དམིགས་ཏེ་ གཞན་རྒྱལ་ཁབ་ལས་ནང་འདྲེན་འབད་མ་དགོ་པར་ རང་མགོ་རང་འདྲོང་སྦེ་སྡོད་ཐབས་ལུ་དམིགས་པ་བསྐྱེད་དེ་འབདཝ་ཨིན།</big>
 
+=== བདག་སྐྱོང་ལེགས་སྒྱུར། ===
+<big>༉ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ནང་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ དུས་རྟག་ཏུ་རྒྱལ་ཁབ་དང་ མི་སེར་ལུ་ག་ཅི་དེ་ཁག་ཆེ་བའི་ཕན་བདེ་བསྒྲུབ་ནིའི་དོན་ལུ་ མི་དབང་མཆོག་གི་ཐུགས་ཀྱི་དགོངས་བཞེད་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ ཀ་ཆེན་བཞི་ཡོད་པའི་ནང་ལས་ཁག་ཆེ་ཤོས་ར་ གཞུང་སྐྱོང་ལེགས་ལྡན་དེ་ཨིན། གཞུང་སྐྱོང་ལེགས་ལྡན་ཟེར་བའི་སྐབས་ གཞུང་དེ་ཕྱི་ལས་བལྟ་བའི་ངོ་བོ་ལུ་ ཆུང་ཀུ་དང་ཁྱད་ནུས་ཆེ་ཏོག་ཏོ་ ལྷག་པར་དུ་ མི་སེར་གྱི་ཚོར་སྣང་ཤེས་རྟོགས་འབད་དེ་ མཐའ་དོན་བསྒྲུབ་ནིའི་བྱ་བ་ཅིག་ཨིན་པ་ཅིན་ ངོས་ལེན་འབད་དགོཔ་ཁག་ཆེཝ་ལས་བརྟེན་ཨིན། དེ་འབདཝ་ལས་བརྟེན་ འཛིན་སྐྱོང་ལྷན་སྡེ་ འཐུས་མི་བཅུ་ཐམ་འབད་མི་ རྒྱལ་ཡོངས་ཞི་གཡོག་ལྷན་ཚོགས་ རྒྱལ་གཞུང་རྩིས་ཞིབ་དབང་འཛིན་དང་ རྩོད་དཔོན་ཡོངས་ཁྱབ་ཡིག་ཚང་ ལ་སོགས་པ་ཚུ་ གསར་བཙུགས་མཛད་གནང་ཡོདཔཨིན། (དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ་ ༢༠༡༠) ནང་བཀོད་དེ་འདུག།<br>
 
+སྤྱི་ལོ་ ༡༩༩༠ ལས་འགོ་བཟུང་སྟེ་ འཐུས་མི་བཅུ་ཐམ་འབད་མི་ རྒྱལ་ཡོངས་ཞི་གཡོག་ལྷན་ཚོགས་ཟེར་ འགོ་བཙུགས་ཡོད་མི་ནང་ལུ་ཁྲི་འཛིན་ཡང་ མི་དབང་མཆོག་གི་ངོ་ཚབ་སྦེ་ གདམ་འཐུ་འབད་སྲོལ་ཡོད་རུང་ ཤུལ་ལས་འཐུས་མི་ཚུ་སྐོར་རྒྱབ་སྦེ་ཁྲི་འཛིན་གྱི་ འགན་ཁུར་འབག་སྲོལ་ཅིག་འགོ་བཙུགས་ནུག། ལྷག་པར་དུ་ མི་དབང་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་གིས་ གཞི་བཙུགས་འབད་ཡོད་པའི་ བློ་གྲོས་ཚོགས་སྡེ་དེ་ཡང་ སྔར་ལས་ལྷག་སྟེ་སྒྲིང་སྒྲི་བཟོ་སྟེ་ གཞུང་སྐྱོང་གིས་སྲིད་བྱུས་དེ་ཡང་ ག་ཅི་དེ་ལེགས་ཤོམ་བཟོ་ཡོདཔ་ཨིན། ཚོགས་སྡེ་དེ་གིས་འགན་ཁུར་ངོ་མ་དེ་ མི་དབང་མཆོག་ལུ་ བསླབ་བྱ་བྱིན་ནི་དང་ཞི་གཡོགཔ་ཚུ་བལྟ་ནི་དེ་ཨིན་རུང་ ཤུལ་ལས་མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ འགན་ཁུར་དང་བསྟུན་པའི་དབང་ཚད་སྤྲོད་ནིའི་དོན་ལུ་ མི་དབང་མཆོག་གིས་ སྤྱི་ལོ་ ༡༩༨༤ ལུ་ བསྐྱར་བཟོ་འབད་ཡོད་པའི་ བཅའ་ཡིག་དང་སྒྲིག་གཞི་ལ་སོགས་པ་ཚུ་ གྲོས་འཆར་བརྩམས་ཏེ་ཕུལ་ཡོདཔ་ལས་ ག་ཅི་དེ་ཕུན་སུམ་ཚོགས་ཏོག་ཏོ་འགྱོ་ཡོདཔ་ཨིན། བཅའ་ཡིག་དེ་ནང་ལུ་ཡང་ འབྲུག་པའི་མི་ངོ་ རྒྱལཔོ་ལས་འགོ་བཟུང་ གཞན་མི་ངོ་ག་འབད་རུང་ཅིག་གིས་ རྒྱལ་ཁབ་དང་མི་སེར་ལུ་གནོད་པ་བཀལ་ནིའི་ལཱ་འབད་བ་ཅིན་ བློ་གྲོས་ཚོགས་སྡེ་གིས་ བཀག་བཞག་ནི་མེན་པར་ མི་དབང་རྒྱལཔོ་དང་ གཞན་དགོས་མཁོ་དང་བསྟུན་ཏེ་ ལྷན་རྒྱས་གཞུང་ཚོགས་དང་རྒྱལ་ཡོངས་ཚོགས་འདུ་ ལ་སོགས་པ་ཚུ་ལུ་སྙན་ཞུ་ཕུལ་ཆོག་པའི་ སྐོར་ལས་ཡང་བཀོད་དེ་ཡོདཔ་ཨིན། (Royal Education Council, 2020).<br>
 
+ལྷག་པར་དུ་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ འཛིན་སྐྱོང་གོང་འཕེལ་གྱི་ལས་སྣ་ལེ་ཤ་མཛད་ཡོད་པའི་ནང་ལས་ ཁག་ཆེ་ཤོས་ཅིག་ རྒྱལ་ཁབ་ཀྱི་འཕྲལ་ཕུགས་ཀྱི་དོན་ལུ་དམིགས་ཏེ་ མི་སེར་ཚུ་ལུ་ཡིད་ཆེས་སྦོམ་གནང་སྟེ་ འཛིན་སྐྱོང་དང་དངུལ་འབྲེལ་གྱི་དབང་ཆ་འདི་ འགན་ཁུར་ཕྱིར་སྤེལ་གྱི་ཐོག་ལས་ རྒྱལ་ཁབ་ཀྱི་གནད་དོན་ཁག་ཆེ་ཆུང་ག་བཟུམ་ཅིག་འབད་རུང་ ཐག་གཅད་ནིའི་ལམ་ལུགས་ནང་ལུ་ གསརཔ་ཅིག་མི་སེར་ཚུ་གིས་ སེམས་ཤུགས་བསྐྱེད་དེ་ བཅའ་མར་གཏོགས་བཅུག་ནི་འདི་ཨིན། དེ་འབདཝ་ལས་བརྟེན་ མི་དབང་མཆོག་གིས་ སྤྱིར་བཏང་མི་སེར་གྱི་གནས་རིམ་ནང་ གོ་སྐབས་འདྲ་མཉམ་སྤྲོད་ནིའི་དོན་ལུ་ སྤྱི་ལོ་ ༡༩༨༡ ལུ་ འཆར་གཞི་ལྔ་པ་དང་བསྟུན་ རྫོང་ཁག་ཡར་རྒྱས་ཚོགས་ཆུང་དང་ སྤྱི་ལོ་ ༡༩༩༡ ཟླ་ ༧ པའི་ཚེས་ ༡༥ ལུ་ འཆར་གཞི་བདུན་པ་དང་བསྟུན་ རྒེད་འོག་ ༡༩༧ ཡོད་མི་ནང་ཡར་རྒྱས་ཚོགས་ཆུང་ཅིག་ཡང་ གཞི་བཙུགས་མཛད་གནང་ཡོདཔ་ཨིན། དེ་ལས་བརྟེན་ མི་སྡེ་ནང་དཔལ་འབྱོར་གོང་འཕེལ་གྱི་ལས་རིམ་ བརྩམ་ནི་དང་ལག་ལེན་འཐབ་ནི་ཚུ་ཡང་ འབྲུག་པའི་མི་སེར་ཚུ་གིས་ འགན་ཁག་འབག་ཚུགསཔ་བཟོ་གནང་སྟེ་ཡོདཔ་ཨིན། (Royal Education Council, 2020).<br>
+
+དེ་མ་ཚད་ མི་དབང་རྒྱལཔོ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༩༩༨ ཟླ་ ༦ པའི་ཚེས་ ༡༠ ལུ་ འཆར་གཞི་བརྒྱད་པ་དང་བསྟུན་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཆེན་མོ་ཐེངས་ ༧༦ པའི་ནང་ཚོགས་དཔོན་ལུ་ དཔྱད་རིག་རྣམ་རྟོག་མེད་སི་སི་སྦེ་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ནང་ མི་སེར་གྱི་རེ་བ་དང་བསྟུན་པའི་གཞུང་ ལྷག་པར་དུ་ དེ་དང་བསྟུན་པའི་ འཛིན་སྐྱོང་འཐབ་ནི་གི་ལམ་ལུགས་ བརྟན་ཏོག་ཏོ་ཅིག་དགོ་པའི་ཁར་ ལམ་ལུགས་དེ་གིས་ རྒྱལ་ཁབ་དང་མི་སེར་གྱི་མཐའ་དོན་ལུ་ དུས་དང་བསྟུན་པའི་ ཚད་མཉམ་འབད་ཚུགས་པའི་ཐབས་ལམ་ཅིག་ ཐད་རི་བ་རི་དགོཔ་ཁག་ཆེ་བའི་སྐོར་ལས་ བཀའ་ཐམ་ཡང་གནང་ཡོདཔ་ཨིན། རྒྱལ་ཡོངས་ཚོགས་འདུ་ཆེན་མོ་གིས་ འབྲུག་མངའ་བདག་རྒྱལཔོ་ལུ་ ཡིད་ཆེས་ཚོགས་རྒྱན་གྱི་ གནས་ཐོ་བཀོད་སྲོལ་ཅིག་ ལག་ལེན་འཐབ་ནི་སྦེ་ཐག་བཅད་དགོཔ་དེ་ཡང་ མངའ་བདག་རྒྱལ་པོའི་ཞབས་ལས་ འཐུས་མི་ཚུ་ལུ་དེ་བཟུམ་མཛད་དགོ་པའི་བཀའ༌རྒྱ༌གནང༌ནི༌དེ༌གིས༌ཨིན། (ཀུན༌བཟང༌ཆོས༌འཕེལ། རྣམ༌རྒྱལ༌ཕུན༌ཚོགས༌། ༢༠༠༩ ཤོགས༌གྲངས༌ ༥༧-༥༩) ནང༌བཀོད༌དེ༌འདུག།<br>
+
+དེ༌ལུ༌བརྟེན༌ཏེ༌འབྲུག༌ལུ༌གོང༌འོག༌དབྱེ༌བ༌མེད༌པར༌ འདྲ༌མཉམ༌གྱི༌ཐོག༌ཁར༌ བྱ༌བ༌ག༌ཅི༌བཟུམ༌ཨིན༌རུང༌ ལེགས༌ཤོམ༌འགྱོ༌སྟེ་ཡོདཔ༌ཨིན། ལྷག༌པར༌དུ༌ མི༌དབང༌མཆོག༌གིས༌ ཚོགས༌འདུ༌ཆེན༌མོ༌གིས༌ ཡིད༌ཆེས༌མེད༌པའི༌ཚོགས༌རྒྱན༌ གསུམ༌དཔྱ༌གཉིས༌ཕུལ༌ཏེ༌ཡོད༌པ༌ཅིན༌ འབྲུག༌གི༌མངའ༌བདག༌རྒྱལཔོ༌མཆོག༌ རྒྱལ༌ཁྲི༌ལས༌དགོངས༌ཞུ༌མཛད༌དེ༌ བརྒྱུད༌འཛིན༌རྒྱལ༌སྲས༌ཡང༌ན༌ བརྒྱུད༌འཛིན༌ཤུལ༌མམ༌དེ༌ལུ༌ གསེར༌ཁྲི༌མངའ༌གསོལ༌མཛད༌དགོ༌པའི༌ བཀའ༌ཐམ༌དང༌བཀའ༌རྒྱ༌ཡང༌གནང༌ཡོདཔ༌ཨིན། མི༌དབང༌མཆོག༌ལུ༌ མི༌སེར༌གྱིས༌ག༌དེམ༌ཅིག༌ཞུ༌བ༌ཕུལ༌རུང༌ ཕྱག༌ལཱ༌ག༌ཅི༌མཛད༌རུང༌ རྒྱལཔོ༌གི༌དོན༌ལུ༌མེན༌པར༌ རྒྱལ༌ཁབ༌དང༌མི༌སེར༌གྱི༌དོན༌ལུ༌མཛད༌དགོ༌ པའི༌སྐོར༌ལས༌ཡང༌གསུངས༌ཡོདཔ༌ཨིན། དེ༌འབདཝ༌ལས༌བརྟེན༌ རྒྱལ༌ཁབ༌ནང༌སྲིད༌བྱུས༌ཁག༌ཆེ༌ཏོག༌ཏོ༌ཚུ༌ འགྲུབ༌ནིའི༌དོན༌ལས༌ འཛིན༌སྐྱོང༌གི༌དབང༌ཚད༌དང༌ མངའ༌བདག༌རྒྱལཔོ༌ལུ༌ ཡིད༌ཆེས༌ཀྱི༌ཚོགས༌རྒྱན༌ཕུལ༌དགོ༌པའི༌གནད༌དོན༌དེ༌ ཚོགས༌ཐེངས༌དེ༌ནང༌ལས༌ ཐག༌གཅད༌དགོཔ༌ གལ༌ཆེ༌བའི༌བཀའ༌རྒྱ༌ཡང༌གནང༌ཡོདཔ༌ཨིན། (ཀུན༌བཟང༌ཆོས༌འཕེལ། རྣམ༌རྒྱལ༌ཕུན༌ཚོགས། ༢༠༠༩ ཤོགས༌གྲངས༌ ༥༤-༥༥) ནང༌བཀོད༌དེ༌ཡོདཔ༌ཨིན།<br>
+
+སྤྱི༌ལོ༌ ༡༩༩༧ ཟླ༌ ༧ པའི༌ཚེས༌ ༢༠ ལས༌ གཞུང༌འཛིན༌སྐྱོང༌གི༌དབང༌ཚད༌ཆ༌མཉམ༌ བཙག༌འཐུ༌ལས༌གྲུབ༌པའི༌བློན༌པོའི༌ ལྷན༌ཚོགས༌ལུ༌ རྩིས༌སྤྲོད༌གནང༌ཡོདཔ༌ཨིན། ལྷན༌ཁག༌ ལས༌ཁུངས༌ ལས༌འཛིན༌ ལས༌སྡེ༌ ལེ༌ཤ༌ཅིག༌གསརཔ༌གཞི༌བཙུགས༌ མཛད༌གནང༌ཡོད༌པའི༌ཁར༌ རྫོང༌ཁག༌ཡར༌རྒྱས༌ཚོགས༌འདུ༌ཐེངས༌ ༨༠ པའི༌ནང༌ འཆར༌གཞི༌དགུ༌པ༌དང༌བསྟུན༌ རྫོང༌ཁག༌དང༌ རྒེད༌འོག༌ཡར༌རྒྱས༌ཚོགས༌ཆུང༌གི༌ བཅའ༌ཁྲིམས༌བསྒྱུར༌བཅོས༌གནང༌སྟེ༌ བཙག༌འཐུ༌ལས༌གྲུབ༌པའི༌ མི༌སྡེའི༌འགོ༌ཁྲིདཔ༌ཚུ༌གི༌གྲས༌ལས༌ རྫོང༌ཁག༌ཚོགས༌འདུ༌དང༌ རྒེད༌འོག༌ཚོགས༌ཆུང༌ལུ༌ དངུལ༌འབྲེལ༌དང༌ འཆར༌གཞི༌བརྩམ༌ནིའི༌འགན༌ཁག༌དང༌ དབང༌ཚད༌ཡང༌གནང༌ཡོདཔ༌ཨིན། སྤྱི༌ལོ༌ ༢༠༠༣ ཟླ༌ ༥ པའི༌ཚེས༌ ༢ ལས༌ རྫོང༌ཁག༌ཚོགས༌འདུ༌དང༌ རྒེད༌འོག༌ ཚོགས༌སྡེའི༌ཁྲི༌འཛིན༌དང༌ གཞུང༌གི༌ཆེ༌མཐོའི༌འགོ༌དཔོན༌ཚུ༌ གཅིག༌ཁར༌འཛོམས༌ཏེ༌ ས༌གནས༌གཞུང༌ལུ༌ བྱ༌སྟབས༌མ༌བདེཝ༌ཡོད༌མི༌ཚུ༌ བསལ་༌ནིའི༌དོན༌ལུ༌ རྒྱལ༌ས༌ལྟེ༌བ༌ལུ༌ལོ༌བསྟར༌ཞལ༌འཛོམས༌འཚོག༌ནིའི༌སྲོལ༌ཅིག༌ཡང༌ འགོ༌བཙུགས༌གནང༌ཡོདཔ༌ཨིན། (Royal Education Council, 2020).<br>
+
+དཔལ༌ལྡན༌འབྲུག༌པའི༌རྒྱལ༌ཁབ༌ནང༌ལུ༌ ཞི༌གཡོགཔ༌ཚུ༌གཞུང༌ལུ༌ཐ༌དམ༌ཚིག༌དང༌ ལས༌རྒྱུ༌འབྲས༌ཐོག༌ལས༌ཞི༌གཡོག༌གི༌བཅའ༌ཁྲིམས༌ བཅའ༌ཡིག༌ སྒྲིག༌གཞི༌ཚུ༌ལས༌འགལ༌བ༌མེདཔ༌སྦེ་ སྲིད༌དོན༌ཚོགས༌པའི༌དབང༌ལུ༌མ༌ཤོར༌བར༌ སྤྱིར༌བཏང༌གི༌འགན༌ཁག༌འབག༌སྟེ༌ གཡོ༌སྒྱུ༌ངན༌ལྷད༌མེད༌པར༌ ཕྱག༌ཞུ༌ནི༌དང༌ དྭངས༌གསལ༌ འགན༌འཁྲི༌ ཁྱད༌རིག༌ འཇོན༌ཐངས༌ཅན༌སྦེ༌ ཡར༌དྲག༌གཏང༌ནིའི༌དོན༌ལུ༌ སྤྱི༌ལོ༌ ༡༩༨༢ ཟླ༌ ༦ པའི༌ནང༌ རྒྱལ༌གཞུང༌ཞི༌གཡོག༌ལྷན༌ཚོགས༌དེ༌ རྩ༌ཁྲིམས༌ཅན༌གྱི༌རང༌སྐྱོང༌ཡིག༌ཚང༌སྦེ༌ བཟོ༌གནང༌ཡོདཔ༌ཨིན། དེ༌མ༌ཚད༌འབྲུག༌པའི༌རྒྱལ༌ཁབ༌དང༌མི༌སེར༌གྱི༌དོན༌ལུ༌ རྒྱུན༌སྐྱོང༌ཟད༌གྲོའི༌མ༌དངུལ༌ཚུ༌ འདྲ༌མཉམ༌དང༌ཚད༌འཛིན༌ཐོག༌ལས༌ བདག༌འཛིན༌འཐབ༌སྟེ༌ དངུལ༌རྩིས༌ཀྱི༌ཁྲིམས༌དང༌ལམ༌ལུགས༌ཚུ༌ལས༌ འགལ༌བ༌མེདཔ༌ སྤྱོད༌དགོ༌ནི༌དེ༌གིས༌ ཕྱོགས༌རིས༌མེད༌པར༌ དྲང༌བདེན༌གྱི༌ལག༌ལེན༌འཐབ༌སྟེ༌ རྒྱལ༌ཁབ༌ཀྱི༌འོང༌འབབ༌དང༌ མི༌དམངས༌ཀྱི༌སྤྱི༌དངུལ༌ཚུ༌ ཆུད༌ཟོས༌མེདཔ༌སྦེ༌ ལག༌ལེན༌འཐབ༌ཚུགས༌ནིའི༌དོན༌ལས༌ རྒྱལ༌གཞུང༌རྩིས༌ཞིབ༌དབང༌འཛིན༌དེ༌ཡང༌ རྩ༌ཁྲིམས༌ཅན༌གྱི༌དབང༌འཛིན༌ཡིག༌ ཚང༌སྦེ༌ གཞི༌བཙུགས༌འབད༌གནང༌སྟེ༌ཡོདཔ༌ཨིན། ལྷག༌པར༌དུ༌ཁྲིམས༌དང༌འབྲེལ༌བའི༌ འགན་ཁུར༌འབག༌ནིའི༌དོན༌ལུ༌ སྤྱི༌ལོ༌ ༢༠༠༠ ཟླ༌ ༤ པའི༌ཚེས༌ ༡༤ ལུ༌ ཁྲིམས༌དོན༌ལས༌ཁུངས༌ཀྱི༌ཡིག༌ཚང༌གཞི༌བཙུགས༌འབད༌གནང༌མི༌དེ༌ སྤྱི༌ལོ༌ ༢༠༠༦ ཟླ༌ ༩ པའི༌ཚེས༌ ༢༤ ལུ༌ རྩོད༌དཔོན༌ཡོངས༌ཁྱབ༌ཡིག༌ཚང༌རང༌སྐྱོང༌སྦེ༌བཟོ༌སྟེ༌གནང༌ཡོདཔ༌ཨིན། (ཀུན༌བཟང༌ཆོས༌འཕེལ། རྣམ༌རྒྱལ༌ཕུན༌ཚོགས༌། ༢༠༠༩ ཤོགས༌གྲངས༌ ༥༧-༥༩) ནང༌བཀོད༌དེ༌འདུག།
+</big>
+
+=== ཆོས་དང་ལམ་སྲོལ། ===
+<big>༉ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ནང་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ རྒྱལ་ཁབ་དང་མི་སེར་གྱི་ མཐའ་དོན་ལུ་དམིགས་ཏེ་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཟེར་ གཞི་བཙུགས་འབད་བའི་ཤུལ་ལུ་ ཀ་ཆེན་བཞི་སྦེ་བཀོད་ཡོད་པའི་ནང་ལས་ ཆོས་དང་ལམ་སྲོལ་བདག་འཛིན་འབད་དགོཔ་དེ་ ག་ནི་བ་ཁག་ཆེ་བའི་ ཀ་ཆེན་གསུམ་པའི་ནང་ཚུདཔ་ཨིན། དེ་སྦེ་ཚུད་དགོ་མི་དེ་ཡང་ རྒྱལ་ཁབ་ནང་ཕྱིའི་དཔལ་འབྱོར་གོང་འཕེལ་ ག་དེམ་ཅིག་འགྱོ་རུང་ དེ་ནང་གནས་མི་འགྲོ་བ་ཚུ་གིས་ མནོ་བསམ་གཏང་ཐངས་དང་ བྱ་བ་སྤྱོད་ལམ་ཚུ་ ག་ཅི་དེ་ཁག་ཆེཝ་ལས་བརྟེན་ ཨིན། ཆོས་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ནང་ ལཱ་དང་བྱ་བ་ག་ཅི་ར་འབད་རུང་ མནོ་བསམ་གཅིག་ཁར་བཏང་སྟེ་ ཆོས་དང་མཐུནམ་སྦེ་འབད་བ་ཅིན་ ལཱ་དང་བྱ་བ་ག་ཅི་ར་འབད་རུང་ ལེགས་ཤོམ་འགྱོཝ་ཨིན། (Royal Education Council, 2020).<br>
+
+འབྲུག་རྒྱལ་ཁབ་ནང་སྐྱེ་སྟེ་ འབྲུགཔ་ཨིན་པའི་ངོ་རྟགས་ལུ་ ལཱ་དང་བྱ་བ་ག་ཅི་ར་འབད་རུང་ ཐ་དམ་ཚིག་དང་ལས་རྒྱུ་འབྲས། ཆོས་དང་ལམ་སྲོལ་བཟང་པོ་ཚུ་ སེམས་ཁར་བཞག་སྟེ་ རང་དང་གཞན་ཟེར་དབྱེ་བ་མ་ཕྱེ་བར་འབད་དགོཔ་ཨིན། དུས་འགྱུར་བའི་གནས་སྟངས་ད་རེས་བཟུམ་ཅིག་ནང་ལུ་ འབྲུག་པའི་ན་གཞོན་ཚུ་གིས་འབད་རུང་ སྔོན་བྱོན་རྒྱལ་བ་གོང་མ་ཚུ་གིས་ མཛད་བྱ་བཟང་པོ་མར་ཉམས་མ་བཅུག་པར་ ག་ཅི་དེ་སེམས་ལུ་སྤྲོ་སྣང་ཆེ་བའི་སྒོ་ལས་ བདག་འཛིན་འཐབ་དགོཔ་ཨིན། དེ་བཟུམ་མའི་བྱ་བ་ལུ་བརྩོན་ཚུགས་པ་ཅིན་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་གྲུབ་མ་ཚུགས་པའི་དཔེ་མི་སྲིད་ནི་ཨིན། (ཀུན་བཟང་ཆོས་འཕེལ་དང་ རྣམ་རྒྱལ་ཕུན་ཚོགས་ ༢༠༠༩ ཤོག་གྲངས་ ༤༥) ནང་བཀོད་དེ་འདུག།<br>
+
+མི་དབང་མཆོག་གིས་ཐུགས་ཀྱི་དགོངས་བཞེད་གཙོ་བོ་ར་ འབྲུག་པའི་ཆོས་དང་ལམ་སྲོལ་གཉིས་ བདག་འཛིན་དང་ཉམས་སྲུང་འབད་ནི་དེ་ཨིན་མི་དེ་ཡང་ འབྲུག་པའི་རང་དབང་རང་བཙན་གྱི་ ངོ་རྟགས་གཙོ་བོ་ དེ་གཉིས་ཀྱིས་སྟོན་ནི་དེ་གིས་ཨིན། འབྲུག་པའི་ལམ་སྲོལ་ཚུ་དམིགས་བསལ་གྱིས་མ་འདྲཝ་སྦེ་ཡོད་མི་དེ་ཡང་ དཔལ་ལྡན་འབྲུག་པའི་སྒྲིག་ལམ་རྣམ་གཞག་དང་ ལམ་སྲོལ་བཟང་པོ་ འབྲུག་པའི་གྱོན་ཆས་གོ་དང་དཀྱི་ར་ རྒྱལ་ཁབ་ཆུང་ཀུ་ཅིག་ནང་ ཁ་སྐད་མ་འདྲཝ་ལ་སོགས་པ་ཚུ་ཡོདཔ་ལས་བརྟེན་ཨིན། རྒྱལ་ཁབ་ཆུང་ཀུ་གཅིགཔོ་དེ་ སྟོབས་དང་མི་རློབས་ཀྱི་ཐད་ཁར་ གཞན་དང་དོ་འགྲན་འབད་ཚུགས་པའི་ནུས་པ་མེད་རུང་ རང་གི་རྒྱལ་ཁབ་ནང་ཡོད་པའི་སྔར་སྲོལ་ལམ་ལུགས་ ཆོས་དང་ལམ་སྲོལ་ཚུ་ ལེགས་ཤོམ་སྦེ་བདག་འཛིན་འཐབ་ནི་དེ་ རྒྱལ་ཁབ་རང་འདྲོངས་གནས་ཐབས་ཀྱི་ ཁུངས་ངོ་མ་ཅིག་ཨིནམ་ལས་ མི་དབང་རྒྱལཔོ་མཆོག་གིས་ཡང་ ག་ཅི་དེ་བདག་འཛིན་འཐབ་དགོ་པའི་བཀའ་རྒྱ་ཚུ་ཡང་གནང་སྟེ་ཡོདཔ་ཨིན། (Royal Education Council, 2020).<br>
+
+དེ་འབདཝ་ལས་ སྤྱི་ལོ་ ༡༩༧༣ ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཚོགས་ཐེངས་ ༣༨ པའི་ནང་ འབྲུག་པའི་རྒྱལ་ཁབ་ཀྱི་ངོ་རྟགས་སྦེ་ རྒྱལ་ཡོངས་གྱོན་ཆས་གོ་དང་དཀྱི་ར་དེ་ འབྲུག་རྒྱལ་ཡོངས་གྱོན་ཆས་སྦེ་འགོ་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༩༨༠ ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཐེངས་ ༥༢ པའི་ནང་ དཔལ་ལྡན་འབྲུག་པའི་སྒྲིག་ལམ་རྣམ་གཞག་ དེ་ཡང་འགོ་བཙུགས་གནང་ དེ་མ་ཚད་ སྤྱི་ལོ་ ༡༩༨༤ ལུ་ བཟོ་རིག་ འཆམ་ འབྲུག་པའི་ཞབས་ཁྲ་ ལ་སོགས་པ་ཚུ་ཡང་ གཞི་བཙུགས་མཛད་གནང་ཡོདཔ་ཨིན། མི་དབང་མཆོག་གིས་ དེ་བཟུམ་མའི་མཛད་བྱ་བཟང་པོ་ཚུ་ གཞི་བཙུགས་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ཡར་རྒྱས་ཀྱི་གོམ་པ་ལུ་དམིགས་ཏེ་ སྤྱི་ལོ་ ༡༩༨༤ པའི་ནང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་འཐུས་མི་སྦེ་འཛུལ་ཞུགས་འབད་ནུག། (Karma Phuntsho, 2013).<br>
+
+དེ་ལས་ལྷག་པའི་མཛད་བྱ་ཁག་ཆེ་ཏོག་ཏོ་ཅིག་ སྤྱི་ལོ་ ༡༩༨༤ སྤྱི་ཟླ་ ༨ པའི་ཚེས་ ༡ ལུ་ ཆོས་ཀྱི་བདག་པོ་ རྗེ་མཁན་པོའི་མངའ་འོག་ལུ་ གྲྭ་ཚང་ལྷན་ཚོགས་གཞི་བཙུགས་གནང་ཡོདཔ་མ་ཚད་ མི་དབང་མཆོག་གིས་ དུས་དང་ཕུ་ལས་བྱུང་པའི་ ཅ་རྙིང་ཚུ་བཞག་ནིའི་དོན་ལུ་ འགྲེམ་སྟོན་ཁང་ཚུ་ཡང་གཞི་བཙུགས་མཛད་གནང་ནུག། དེ་མ་ཚད་ འབྲུག་པའི་ཁྱིམ་ཀྱི་བཟོ་བཀོད་རིག་པ་ཚུ་དང་ གཞན་ཡང་ཟམ་པ་ མཐོང་གྲོལ་དང་ཐང་ཀ་ ངག་རྒྱུན་ལས་དར་བའི་ རྩོམ་རིག་ ཞབས་ཁྲ་ བཟོ་རིག་མ་འདྲཝ་ལ་སོགས་པའི་ ལམ་སྲོལ་ག་ནི་བ་བཟང་པོ་ཚུ་ བདག་འཛིན་སྦེ་བཞག་ནིའི་བཀའ་རྒྱ་ཚུ་ཡང་གནང་ཡོདཔ་ཨིན། ལྷག་པར་དུ་ སྔོན་བྱོན་གོང་མ་ཚུ་གིས་ བསྒྲུབས་བཞག་མི་རྫོང་ ལྷ་ཁང་ མཆོད་རྟེན་ལ་སོགས་པ་ཚུ་ཡང་ མི་ཉམས་གོང་འཕེལ་གཏང་ནིའི་ ལས་འཆར་ཚུ་ཡང་ བརྩམས་གནང་པའི་གྲས་ལས་ སྤུང་ཐང་བདེ་ཆེན་ཕོ་བྲང་རྫོང་དང་ སྤ་རོ་སྟག་ཚང་ལྷ་ཁང་གཉིས་ མེ་རྐྱེན་ཤོར་བའི་ཤུལ་ལུ་ ཉམས་བཅོས་ཡང་མཛད་གནང་ནུག། (Sonam Kinga, 2009, p143).<br>
+
+འབྲུག་པའི་སྔར་སྲོལ་ལམ་ལུགས་བཟང་པོ་དེ་ལུ་ གནོད་རྐྱེན་འབྱུང་མི་བཅུག་ནིའི་ཐབས་ལུ་ སྤྱི་ལོ་ ༡༩༨༥ ཟླ་ ༢ པའི་ཚེས་ ༣༡ ལུ་ སྲོལ་འཛིན་ལྷན་ཚོགས་ཡང་ གཞི་བཙུགས་མཛད་གནང་བའི་ཤུལ་ལུ་ འབྲུག་རྒྱལ་ཁབ་ནང་ ཧེ་མ་ལས་གཞི་བཙུགས་མཛད་ཡོད་པའི་ ལྷ་ཁང་ རྫོང་གཞི་ཁག་དང་ གཞན་དང་གཞན་ཡང་ ལེ་ཤ་ར་གསརཔ་བཞེངས་ཡོདཔ་མ་ཚད་ ཧེ་མ་ལས་ཡོད་མི་ཚུ་ཡང་ ག་ཅི་དེ་ལེགས་ཤོམ་སྦེ་ ཉམས་སྲུང་འབད་དེ་བཞག་ནུག། སྤྱི་ལོ་ ༡༩༨༥ སྤྱི་ཟླ་ ༩ པའི་ཚེས་ ༢ ལུ་ རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས་ཡང་ གཞི་བཙུགས་མཛད་གནང་སྟེ་ རྒྱལ་ཡོངས་སྐད་ཡིག་རྫོང་ཁ་འདི་ ག་ཅི་དེ་ལེགས་ཤོམ་སྦེ་བདག་འཛིན་འཐབ་ཡོདཔ་མ་ཚད་ རྫོང་ཁའི་ཐོག་ དཔེ་དེབ་སྣ་ཚོགས་གསར་བརྩམས་འབད་དེ་ སྦྱོང་བརྡར་དང་རྫོང་ཁའི་གློག་རིག་མཐུན་རྐྱེན་ཚུ་ཡང་ གཞི་བཙུགས་འབད་ཞིནམ་ལས་ རྫོང་ཁག་ རྒེད་འོག་དང་ གཡུས་སྒོ་ལ་སོགས་པ་ཚུ་ནང་ཡང་ རྫོང་ཁའི་སྐད་ཡིག་ཤེས་ཡོན་ དར་ཁྱབ་སྦོམ་སྦེ་བཏང་ནུག། (ཀུན་བཟང་ཆོས་འཕེལ་དང་ རྣམ་རྒྱལ་ཕུན་ཚོགས་ ༢༠༠༩ ཤོག་གྲངས་ ༤༩) ནང་བཀོད་དེ་འདུག།<br>
+
+དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་ནང་ ཆོས་གོས་དང་ལས་སྲོལ་ཚུ་རྒྱལ་ཁབ་གཞན་དང་མ་འདྲཝ་སྦེ་ ཡོད་མི་དེ་ཡང་ དུས་རབས་ ༨ པའི་ནང་ སངས་རྒྱས་གཉིས་པ་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་གིས་ ལུང་བསྟན་དང་འཁྲིལ་ འབྲུག་ལུ་ཆོས་ཀྱི་བདག་པོ་རིམ་པར་བྱོན་ཏེ་ དུས་རབས་ ༡༥ པའི་ནང་ ཐུགས་རིག་མཁས་པའི་ གཏེར་སྟོན་པདྨ་གླིང་པ་མཆོག་བྱོན་ཏེ་ ཆོས་ཕྱོགས་ཀྱི་ལམ་སྲོལ་བཟང་པོ་ཚུ་ གཞི་བཙུགས་མཛད་གནང་ཡོདཔ་མ་ཚད་ དུས་རབས་ ༡༧ པའི་ནང་ བླ་མ་ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་གིས་ འབྲུག་པ་དཀར་བརྒྱུད་ཀྱི་ཆོས་དེ་ བོད་གཞུང་དང་མ་འདྲཝ་སྦེ་ ཆོ་གོའི་གདངས་དབྱངས་དང་རྔ་རོལ་ དེ་ལས་དུང་དང་རྒྱ་གླིང་གི་ལེའུ་ལས་འགོ་བཙུགས་  ལག་ལེན་སོ་སོ་བརྩམས་གནང་པའི་རྒྱུ་མཚན་ལུ་ ཆོས་དང་རིག་གཞུང་ལས་བརྟེན་དར་བའི་ལམ་སློལ་ཚུ་ཡང་ ག་ཅི་དེ་ལེགས་ཤོམ་སྦེ་ བདག་འཛིན་འཐབ་དགོཔ་ཁག་ཆེ་ཤོས་ཅིག་ཨིན། (དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ་ ༢༠༡༠ ཤོག་གྲངས་ ༣༦༤) ནང་བཀོད་ནུག།<br>
+
+འབྲུག་རྒྱལ་ཁབ་འདི་དུས་ནམ་ར་འབད་རུང་ རང་དབང་གི་ཁུར་ཆ་འབག་སྡོད་ཐབས་ལུ་དམིགས་ཏེ་ སྔོན་བྱོན་རྒྱལ་བ་གོངམ་ཚུ་གིས་ མཛད་བྱ་བཟང་པོ་ཚུ་དང་ ཧེ་མ་ལས་དར་ཡོད་པའི་ འབྲུག་པའི་ཆོས་དང་ལམ་སྲོལ་དེ་ བཀོ་མ་བཞག་པར་ག་ཅི་དེ་ལེགས་ཤོམ་སྦེ་ བདག་འཛིན་དང་ཉམས་སྲུང་འབད་དགོཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་ཟེར་བའི་མིང་ གཞན་དང་མ་འདྲཝ་བཟོ་མི་གཙོ་བོ་དེ་ར་ འབྲུག་པའི་ལམ་སྲོལ་གཞན་དང་མ་འདྲཝ་ཡོད་པའི་གུར་ འབྲུག་མི་ཟེར་སླབ་དགོ་མི་དེ་ཡང་ རྒྱལ་ཁབ་གཞན་དང་མ་འདྲ་བའི་ སྤྱོད་ལམ་བཟང་པོ་ ལས་རྒྱུ་འབྲས་དང་ཐ་དམ་ཚིག་ཟེར་བའི་ཚིག་གིས་ དོན་དག་རྟོགས་ཚུགས་པའི་ཁར་ དེ་ལུ་ཡིད་ཆེས་བསྐྱེད་ཤེས་ནི་དེ་གིས་ཨིན།</big>
+
+=== བརྡ་དོན་དང་བརྒྱུད་འབྲེལ་གྱི་ལམ་ལུགས། ===
+<big>༉ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ སྤྱིར་བཏང་ག་ནི་བ་ཉམས་དགའ་ཏོག་ཏོ་དང་ སྐྱིད་ཏོང་ཏོ་སྦེ་ཡོད་མི་དེ་ སྐྱབས་གནས་དམ་པ་མི་དབང་རིམ་བྱོན་ཚུ་གི་བཀའ་དྲིན་དང་ སྤྱིར་དཀོན་མཆག་གསུམ་གྱི་ཐུགས་རྗེ་བྱིན་རླབས་ལས་བརྟེན་ཨིན། འབྲུག་རྒྱལ་དར་གནམ་ལུ་ཕྱར་ཏེ་ རང་དབང་གི་ངོ་རྟགས་སྟོན་ནིའི་གོ་སྐབས་གནང་མི་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གི་ ཆོས་ལྡན་གྱི་རྒྱལ་ཁབ་ནང་ལུ་ ཡར་རྒྱས་ཀྱི་ལྟ་བ་ལེ་ཤ་ཅིག་ གཞི་བཙུགས་འབད་ཡོད་ས་ལས་ བརྒྱུད་འབྲེལ་གྱི་ལུམ་ལུགས་དེ་ཡང་ འགྱུར་བའི་ལྟ་བ་གཅིག་སྦེ་ འགོ་བཙུགས་ཡོདཔ་ཨིན། དེ་སྦེ་འབྲུག་ལུ་ རིམ་ལུགས་དེ་བཟུམ་གཞི་བཙུགས་མི་དེ་གིས་ འབྲུག་པའི་མི་སེར་ཚུ་ གཅིག་གིས་གཅིག་ལུ་འབྲེལ་བ་འཐབ་ནི་དང་ བརྡ་དོན་སྤྲོད་ལེན་འབད་ནི་ དེ་ལས་དེང་སང་གི་རིམ་ལུགས་གཞན་དང་གཞན་ཡང་ གློག་རིག་ཡོངས་འབྲེལ་དང་ བརྡ་བརྒྱུད་ལ་སོགས་པ་ཚུ་གཞི་བཙུགས་འབད་མི་དེ་གིས་ རང་སོའི་མཐའ་འཁོར་དང་རྒྱལ་ཡོངས་ ལྷག་པར་དུ་རྒྱལ་སྤྱིའི་གནས་ཚུལ་ཚུ་ཤེས་ཚུགས་ནི་ལུ་ཡང་ ཕན་པ་སྦོམ་ར་བྱུང་ཡོདཔ་ཨིན།<br>
+
+མི་དབང་མཆོག་ཐུགས་རྒྱུད་ག་ནི་བ་མཁས་ནི་དེ་གིས་ སྟོབས་ཤུགས་ཅན་གྱི་ རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ན་ཚུད་ཡོད་མི་ དཔལ་ལྡན་འབྲུག་རྒྱལ་ཁབ་འདི་ནང་ལུ་ གོང་འཕེལ་གྱི་རྩ་བ་ངོ་མ་གཅིག་ བརྡ་དོན་བརྒྱུད་འབྲེལ་གྱི་བརྡ་བརྒྱུད་དེ་ དགོས་མཁོ་ཆེཝ་ཨིནམ་མཁྱེན་ནི་དེ་གིས་ སྤྱི་ལོ་ ༡༩༧༣ ཟླ་ ༡༡ པའི་ཚེས་ ༡༡ ལུ་ འབྲུག་རྒྱང་བསྒྲགས་ལས་འཛིན་འདི་ འགོ་དང་པ་རྒྱལ་ཡོངས་ ན་གཞོན་ཚོགས་སྡེ་སྦེ་བཙུགས་ཏེ་གནང་ཡོདཔ་ཨིན། (Lily Wangchuk, 2017). དེ་ལས་བརྟེན་འབྲུག་པའི་མི་སེར་ཚུ་ལུ་ ག་ཅི་དེ་ཕན་ཐོགས་ཆེ་བའི་ཡུལ་ཅིག་ལུ་གྱུར་ཏེ་ཡོད་པའི་གུར་ གནས་ཚུལ་དང་ཐུགས་སྤྲོའི་ལས་རིམ་སྣ་ཚོགས་ རྒྱང་བསྒྲགས་འབད་སྲོལ་ཡོད་མི་དེ་གིས་ འབྲུག་མི་ཚུ་ཡང་གོང་འཕེལ་འགྱོ་བའི་རྟགས་ལུ་ གོམ་པ་གདོང་ཁར་སྤོ་བའི་གོ་སྐབས་ཐོབ་ཡོདཔ་ཨིན། <br>
+
+ལྷག་པར་དུ་ མི་དབང་མཆོག་གིས་ སྤྱི་ལོ་ ༡༩༩༩ སྤྱི་ཟླ་ ༦ པའི་ཚེས་ ༢ ལུ་ འབྲུག་རྒྱལ་བཞི་པ་མཆོག་ གསེར་ཁྲི་གུར་ཕེབས་ཏེ་མི་ལོ་ ༢༥ འཁོར་བའི་དུས་སྟོན་བརྩི་སྲུང་ཞུ་བའི་སྐབས་སུ་ མི་དབང་མཆོག་གིས་ རྒྱལ་ཡོངས་ལུ་གསུང་བཤད་གནང་པའི་སྐབས་ དུས་སྟོན་དེ་མི་དབང་མཆོག་ ཁྲི་ལོ་ ༢༥ འཁོར་བའི་དུས་སྟོན་བརྩི་སྲུང་ཞུཝ་མེན་པར་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ནང་ དཔལ་འབྱོར་གོང་འཕེལ་འགྱོ་བའི་ དགའ་སྟོན་བརྩི་སྲུང་འབདཝ་ཨིན་ཟེར་ཡང་གསུངས་གནང་སྟེ་ཡོདཔ་ཨིན། དེ་སྦེ་གསུངས་དགོ་མི་དེ་ཡང་ མི་དབང་མཆོག་ཁྲི་ཐོག་ཁར་བྱོན་ཏེ་ ཉིནམ་གཅིག་ཡང་སྐུ་ངལ་མ་གནང་པར་ མི་སེར་དང་རྒྱལ་ཁབ་ཀྱི་དོན་ལུ་ སྤྱི་ལོ་ ༡༩༧༢ ལུ་ ཀི་ལོ་མི་ཊར་ ༨༠༠ ལས་ ཉུངམ་སྦེ་སྡོད་མི་ སྣུམ་འཁོར་ལམ་དེ་ སྤྱི་ལོ་ ༢༠༠༦ ལུ་ ཀི་ལོ་མི་ཊར་ ༤༥༥༤.༧༣  དེ་ཅིག་ལུ་ཡར་སེང་འབད་དེ་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ རྫོང་ཁག་ཉི་ཤུ་གེ་རའི་ནང་ ཁྱབ་ཚུགས་ནུག། (Royal Education Council, 2020).<br>
+
+དེ་མ་ཚད་མི་དབང་མཆོག་གིས་ འབྲུག་པའི་མི་སེར་ཚུ་ལུ་ རྒྱལ་ཁབ་ནང་རྒྱང་མཐོང་དང་ ཡོངས་འབྲེལ་གྱི་རིམ་ལུགས་འགོ་བཙུགས་ཞིནམ་ལས་ དེ་ལས་བརྟེན་ཏེ་ མི་རང་ར་སོ་སོ་ལུ་ ཕན་པ་དང་གནོད་པ་ཚུ་ ག་དེ་སྦེ་ཡོདཔ་ཨིན་ནའི་སྐོར་ལས་ཡང་བཤད་དེ་གནང་ཡོདཔ་ཨིན་མས། རྒྱང་མཐོང་དང་ཡོངས་འབྲེལ་ དེ་ལས་ རང་དང་རྒྱལ་ཁབ་ལུ་ ཕན་པ་དང་གནོད་པའི་ གནས་ཚུལ་ལེ་ཤ་ཡོདཔ་ལས་ ན་གཞོན་ཚུ་གིས་ དེ་ཚུ་དབྱེ་བ་ཕྱེ་སྟེ་འབད་དགོཔ་ ཁག་ཆེ་བའི་བཀའ་རྒྱ་ཚུ་ཡང་གནང་ཡོདཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་འདི་མི་རློབས་ཉུང་བའི་ རྒྱལ་ཁབ་ཅིག་ཨིན་རུང་ འཛམ་གླིང་གཅིག་གྱུར་གྱི་དུས་ཚོད་ལུ་ མཐུན་ལམ་ཅན་གྱི་རྒྱལ་ཁབ་ཚུ་དང་གཅིག་ཁར་ འབྲེལ་བ་འཐབ་སྟེ་ཚོང་འབྲེལ་དང་ ལྟ་བཤལ་ཡར་རྒྱས་གཏང་ནིའི་དོན་ལས་ སྤྱི་ལོ་ ༡༩༨༣ ཟླ་ ༡༡ པའི་ཚེས་ ༢ ལུ་ འབྲུག་མཁའ་འགྲུལ་ཡང་གཞི་བཙུགས་འབད་ཡོདཔ་མ་ཚད་ གཞན་ཡང་རླུང་འཕྲིན་ འགྲེམ་ ལྕགས་འཕྲིན་ བརྒྱུད་འཕྲིན་ འགྲུལ་འཕྲིན་ གློག་རིག་ གློག་འཕྲིན་ འགྲུལ་འཁོར་གཏོང་ལེན་ ཀུན་གསལ་ སྒེར་གྱི་གསར་ཤོག་ ལ་སོགས་པ་ཚུ་ཡང་གཞི་བཙུགས་མཛད་ཡོདཔ་ཨིན་མས། (ཀུན་བཟང་ཆོས་འཕེལ་དང་ རྣམ་རྒྱལ་ཕུན་ཚོགས། (༢༠༠༩)<br>
+
+འབྲུག་པའི་མི་སེར་ཡོངས་ཀྱིས་ བརྡ་དོན་འཕྲུལ་རིག་དང་ བརྒྱུད་འབྲེལ་གྱི་བརྡ་བརྒྱུད་ མཐུན་རྐྱེན་བསམ་གྱིས་མ་ཁྱབ་སྦེ་ སྤྱོད་ནི་གི་གོ་སྐབས་ཐོབ་ཡོདཔ་མ་ཚད་ རྫོང་ཁག་ ཁྲོམ་སྡེ་ རྒེད་འོག་ གཡུས་སྒོ་ཁག་ལས་ཕར་ མི་ཚུ་འབྲེལ་བ་འཐབ་ནིའི་དོན་ལུ་ ཆུ་བརྒལ་དགོ་པའི་དཀའ་ངལ་མེད་པར་ སྤྱི་ལོ་ ༡༩༧༢ ལུ་ ཟམ་པ་ ༤༠ དེ་ཅིག་ཡོད་མི་དེ་ སྤྱི་ལོ་ ༢༠༠༦ ཚུན་གྱི་ ནང་འཁོད་ལུ་ ཟམ་པ་ ༦༥༨ ལྷག་ཙམ་བཟོ་སྐྲུན་མཛད་དེ་ སྔོན་མ་བ་ལྷག་སྟེ་ཡར་སེང་མཛད་གནང་ནུག། ཁྱིམ་ཚང་རྒྱལ་ཁབ་ རྒྱ་གར་གཞུང་དང་གཅིག་ཁར་ཡང་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ ས་མཚམས་ཀྱི་ ཁྲོམ་སྡེ་ཚུ་གི་བར་ན་ རེ་ལིའི་ལམ་བཟོ་ནི་ཚུ་ཡང་ སྤྱི་ལོ་ ༢༠༠༥ ཟླ་ ༢ པའི་ཚེས་ ༢༥ ལུ་ ཐུགས་ཐག་བཅད་གནང་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ནང་འཁོད་ཀྱི་གཞུང་ལམ་རྒྱ་སྐྱེད་དང་ ཕུན་ཚོགས་གླིང་དང་ ཐིམ་ཕུག་ཚུན་གྱི་འཁོར་ལམ་དེ་ ཨེ་ཤི་ཡཱན་ གཞུང་ལམ་བཟོ་ནི་སྦེ་ གསུང་གྲོས་གནང་ཡོད་མི་ཚུ་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་མི་སྡེ་དཔལ་འབྱོར་ལུ་ ཁེ་ཕན་སྦོམ་བྱུང་ཚུགསཔ་མཛད་གནང་ཡོདཔ་ཨིན། (ཀུན་བཟང་ཆོས་རྒྱལ་དང་ རྣམ་རྒྱལ་ཕུན་ཚོགས། ༢༠༠༩)<br>
+
+མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་ གསེར་ཁྲི་གུར་བྱོན་པའི་ཉིནམ་ལས་འགོ་བཟུང་ དམིགས་ཡུལ་ངོ་མ་ར་རྒྱལ་ཁབ་ཡར་རྒྱས་ཀྱི་དོན་ལུ་ བརྡ་དོན་དང་བརྒྱུད་འབྲེལ་ལུ་གཙོ་བོ་བཏོན་ཏེ་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་གི་རྒྱལ་ཁབ་ཅིག་འབདཝ་ལས་ དགོས་འདོད་ཆེ་བའི་དངོས་པོ་ཚུ་དང་ ལྷག་པར་དུ་རྒྱལ་ཁབ་འདི་ ནགས་ཚལ་དང་གངས་རི་ཚུ་ག་ནི་བ་སྦོམ་ཡོད་པའི་ས་གོ་ཅིག་འབདཝ་ལས་ ཡར་རྒྱས་གོང་འཕེལ་གྱི་ལས་སྣ་མ་འདྲཝ་ཡོད་རུང་ འགོ་བཙུགས་ཚུགས་པར་ག་ཅི་དེ་ལ་ཁག་ཨིན་རུང་ མི་དབང་མཆོག་གི་བཀའ་དྲིན་ལས་ རེ་བ་སྐྱེད་དོ་བཟུམ་སྦེ་ར་ གྲུབ་ཚུགས་ཏེ་ཡོདཔ་ཨིན། ཡར་རྒྱས་གོང་འཕེལ་ལས་སྣ་གི་ སོན་བཙུགས་ནི་འགོ་བཙུགས་ཏེ་ མི་ལོ་ ༡༠ དེ་ཅིག་གི་ཤུལ་ལུ་ འབྲུག་ལུ་བརྡ་བརྒྱུད་ཀྱི་རིམ་ལུགས་སྣ་ཚོགས་ འབྲུག་རྒྱང་བསྒྲགས་ལས་འཛིན་ ཀུན་གསལ་གསར་ཤོག་དང་ གཞན་བརྡ་བརྒྱུད་དང་འབྲེལ་བའི་ གཞུང་འབྲེལ་ཡིག་ཚང་ཚུ་ཡང་ བཙུགས་ནི་འགོ་བཙུགས་ནུག། (Kinley Dorji, 1991, P3).<br>
+
+སྤྱི་ལོ་ ༡༩༨༨ ལུ་ སྒེར་གྱི་གློག་བརྙན་བཟོ་སྐྲུན་ཁང་ ཨེ་བཱི་ཚོང་སྡེ་གིས་ འབྲུག་ལུ་གློག་བརྙན་མགར་ས་བླ་མའི་སེང་གེ་ཟེར་མི་ འགོ་ཐོག་བཟོ་སྐྲུན་འབད་བའི་ཤུལ་ ད་རེས་ནངས་པའི་དུས་ལུ་ འབྲུག་གློག་བརྙན་ཚོགས་པ་ཟེར་ གནམ་མེད་ས་མེད་ཡོངས་གྲགས་སོང་ཡོདཔ་ཨིན། (Phuntsho Rabten, n.d, P176). འབྲུག་ལུ་ཡོངས་འབྲེལ་གྱི་ཞབས་ཏོག་དེ་ སྤྱི་ལོ་ ༡༩༩༩ སྤྱི་ཟླ་ ༦ པའི་ཚེས་ ༢ ལུ་ རྒྱང་མཐོང་གི་རིམ་ལུགས་འགོ་བཙུགས་པའི་སྐབས་ གཞི་བཙུགས་འབད་བའི་ཤུལ་ལས་ སྤྱི་ལོ་ ༢༠༠༣ སྤྱི་ཟླ་ ༡༡ པའི་ཚེས་ ༡༡ ལུ་ མི་དབང་མཆོག་གིས་ འཁྲུངས་སྐར་དུས་སྟོན་དང་འབྲེལ་ རྒྱལ་ཁབ་ནང་འགོ་ཐོག་ འབྲུག་བརྒྱུད་འཕྲིན་ཚད་གཞི་བཙུགས་འབད་ཡི། དེ་ལས་ སྤྱི་ལོ་ ༢༠༠༦ ལུ་ བཀྲ་ཤིས་འགྲུལ་འཕྲིན་ཚོང་སྡེ་གིས་ཡང་ འགོ་དང་པ་སྒེར་གི་ བརྒྱུད་འཕྲིན་ལས་སྡེ་ཅིག་འགོ་བཙུགས་ཡོདཔ་ཨིན།</big>
+
+=== རྒྱལ་ཁབ་གཅིག་དང་མི་སེར་གཅིག་ཡོད་ཟེར་བའི་དགོངས་དོན། ===
+<big>༉ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ ནང་པ་ཆོས་ལྡན་གྱི་རྒྱལ་ཅིག་ཨིན་པའི་ཁར་ རྒྱལ་རྒྱུད་འཛིན་པའི་བདག་པོ་ཚུ་ཡང་ ག་ཅི་དེ་ཐུགས་རྒྱུད་བཟང་ཏོག་ཏོ་ཡོད་པའི་ནང་ལས་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་ ཧ་ཅང་གིས་ལེགས་ཤོམ་ཡོད་པའི་ཁར་ རྒྱལ་ཁབ་ནང་ལུ་ ཡར་རྒྱས་གོང་འཕེལ་གྱི་ལྟ་བ་ཡང་ལེ་ཤ་ར་ གཞི་བཙུགས་མཛད་གནང་ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ནང་དགོས་མཁོ་དང་བསྟུན་ཏེ་ འགྱུར་བ་མ་འདྲཝ་ལེ་ཤ་མཛད་ཡོད་པའི་མཐའ་མར་ འབྲུག་མི་ཚུ་ཡང་རྒྱལཔོ་མཆོག་ལུ་ བློ་གཏད་དང་ཡིད་ཆེས་སྦོམ་བྱུང་ཡོདཔ་ཨིན། རྒྱ་གར་རྒྱལ་ཁབ་རང་དབང་ཐོབ་སྟེ་ཡུན་མ་རིངམ་ཅིག་ཁར་ རྒྱལ་ཁབ་ཀྱི་ལྷོ་ཕྱོགས་ཁ་ཐུག་ལུ་ ལྷོ་མཚམས་པ་ཚུ་གཞིས་བཅག་ནི་འགོ་བཙུགས་པའི་ཤུལ་ལུ་ རྒྱལ་ཁབ་ནང་སྲིད་དོན་དབང་ཆ་ཁས་ལེན་འབད་དགོཔ་བྱུང་ནུག། རྒྱ་གར་རྒྱལ་ཡོངས་སྲིད་དོན་ཚོགས་པ་ (ཨིན་དྲིཡཱན་ནེཤ་ནཱལ་ཀཱན་གརསི་) གིས་རྒྱབ་སྐྱོར་འཐོབ་ནིའི་དམིགས་པ་བསྐྱེད་དེ་ འབྲུག་རྒྱལ་ཡོངས་ཚོགས་པ་ (བྷུ་ཊཡན་ནེཤ་ནཱལ་ཀཱན་གརསི་) ཟེར་བཞག་སྟེ་ ངོ་ལོག་རྐྱབ་ནིའི་འཆར་གཞི་བརྩམས་ཡོདཔ་ཨིན། (Royal Education Council, 2020).<br>
+
+ཨིན་རུང་བློ་འདོད་སྐྱེད་དོ་བཟུམ་ རྒྱབ་སྐྱོར་ཐོབ་མ་ཚུགསཔ་ལས་ ངོ་རྒོལ་ལུས་ཡོདཔ་མ་ཚད་ མི་དབང་འབྲུག་རྒྱལ་གསུམ་པ་གིས་ ཤུལ་ལས་ངོ་ལོགཔ་ཚུ་ལུ་ ཉེས་པ་ཡངས་ཆག་མཛད་གནང་སྟེ་ མངམ་ར་རྒྱལ་ཁབ་ནང་ལོག་བཏང་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༥༨ ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་གིས་ ལྷོ་འཚམས་པ་ནང་སྐྱོད་འབད་མི་ཚུ་ལུ་ མི་ཁུངས་ཀྱི་ཐོབ་དབང་གནང་ཡོདཔ་མ་ཚད་ འབྲུག་ལུ་སྡོད་ཆོག་པའི་གནང་བ་ཡང་གྲོལ་ཡོདཔ་ཨིན། དེ་གི་ཤུལ་ལས་དཔལ་ལྡན་འབྲུག་གཞུང་གིས་ འགོ་འདྲེན་ཐོག་ལས་ ལྷོ་འཚམས་པ་ཚུ་རྒྱལ་ཡོངས་གཙོ་གཞུང་གི་ གྲངས་སུ་བཙུགས་ནིའི་དོན་ལུ་ ལས་རིམ་སྣ་ཚོགས་བརྩམས་ སྤྱི་ལོ་ ༡༩༨༨ མི་རྩིས་རྐྱབ་པའི་སྐབས་སུ་ རྒྱལ་ཁབ་ནང་ཁྲིམས་འགལ་གྱི་སྒོ་ལས་ གསང་བའི་ཐོག་ལུ་འཛུལ་མི་ལེ་ཤ་ཅིག་ར་ཡོདཔ་སྦེ་ངོས་འཛིན་འབད་ཡོདཔ་ཨིན། (དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ ༡༠༢༠) ནང་བཀོད་དེ་འདུག།<br>
+
+དེ་བཟུམ་མའི་བྱ་བ་འཐོན་མི་ལུ་བརྟེན་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རང་དབང་ལུ་ གནོདཔ་བཀལ་ནིའི་ཉེན་ཁ་སྦོམ་ཡོདཔ་སྦེ་ ངོས་འཛིན་བྱུང་ཡོདཔ་ལས་ སྟོབས་ཆུང་བའི་ཁར་ ཡར་རྒྱས་གོང་འཕེལ་འགྱོ་མ་ཚར་བའི་ རྒྱལ་ཁབ་འབྲུག་ཡུལ་བཟུམ་ཅིག་ནང་ ག་དེ་དྲག་དྲག་སྲུང་སྐྱོབ་ཀྱི་ལས་སྣ་མ་འདྲཝ་ བརྩམས་ཏེ་གདོང་ལེན་འབད་ནིའི་གྲ་སྒྲིག་འབད་ནི་ལུ་ ལ་ཁག་བཏང་ཡོདཔ་ཨིན་མས། སྔོན་མའི་དུས་ལུ་འབྲུག་རྒྱལ་ཁབ་འདི་ གཅིག་མཐུན་དང་གཅིག་སྒྲིལ་ལུ་ བརྩོན་མི་རྒྱལ་ཁབ་ཅིག་ཨིནམ་ལས་ གནས་སྟངས་ཚུབ་དྲག་དེ་བཟུམ་ནང་ཡང་ གདོང་ལེན་འབད་ནི་ལུ་འཇམ་ཡོདཔ་མ་ཚད་ དེ་བཟུམ་གྱི་བྱ་བ་ངན་པ་ འབྱུང་མི་བཅུག་ནིའི་ཐབས་ལུ་ རྒྱལ་ཁབ་ནང་ལུ་འབྲུག་གཞུང་གིས་ རྒེད་འོག་ཡར་རྒྱས་ཚོགས་ཆུང་ དང་རྫོང་ཁག་ཡར་རྒྱས་ཚོགས་འདུ་ཚུ་ གཞི་བཙུགས་མཛད་གནང་ཡོདཔ་ཨིན། དེ་མ་ཚད་སྤྱི་ལོ་ ༡༩༨༩ ལུ་ རྒྱལ་ཁབ་ནང་ལུ་ རྒྱལ་ཡོངས་ངོ་རྟགས་བདག་འཛིན་འབད་ནིའི་དོན་ལུ་ རྒྱལ་ཡོངས་ཀྱི་གནས་ཚད་ནང་ལུ་ ལས་རིམ་ཚུ་ཡང་གཞི་བཙུགས་མཛད་གནང་སྟེ་ འབྲུག་པའི་མི་སེར་ཚུ་གིས་འབྲུག་རྒྱལ་ཁབ་གཅིག་དང་དེ་ནང་གི་མི་སེར་གཅིག་ཨིན་པའི་ གོ་བ་བརྡ་སྤྲོད་ཚུ་ཡང་མཛད་ཡོདཔ་ཨིན། (Royal Education Council, 2020).<br>
+
+དེའི་སྐབས་སུ་ལྷོ་མཚམས་པའི་མི་ངོ་ཚུ་གིས་ཡང་ རྒྱབ་སྐྱོར་ཧྲིལ་བུ་འབད་དེ་འབད་རུང་ ངོས་ལེན་འབད་མ་བཏུབ་མི་ཚུ་གིས་ དཔལ་ལྡན་འབྲུག་གཞུང་ལུ་ ངོ་ལོག་རྐྱབ་འོངམ་ལས་བརྟེན་ སྤྱི་ལོ་ ༡༩༩༠ ཟླཝ་ ༩ པའི་ནང་ ལྷོ་ཕྱོགས་ཁ་ཐུག་ལུ་ དམག་འཁྲུག་ཡང་ཐོན་ཡོདཔ་ཨིན། དྲག་ཐོག་དབང་བཙོང་གི་བྱ་བ་སོགས་འབད་ནི་འགོ་བཙུགས་ཏེ་ བཙན་ཁྲིད་འབད་ནི་ འཕྲོག་བཅོམ་འབད་ནི་དང་ སློབ་གྲྭ་ སྨན་ཁང་དང་གཞན་མི་འཛོམས་སའི་ས་གོ་ནང་ལས་ཕར་ཡང་ དམར་གསད་རྐྱབ་ནི་ལ་སོགས་པ་འབད་བ་ལས་བརྟེན་ རྒྱལ་སྒོ་བསྡམས་བཞག་དགོཔ་ཐོན་ནུག། སྒོ་མ་བསྡམས་པར་བཞག་ཡོད་མི་ཚུ་ གནོད་འཚུབ་རྐྱབ་ནི་དང་ མེདཔ་གཏང་ནི་ལ་སོགས་པའི་བྱ་བ་ངན་པ་ ལེ་ཤ་ར་འབད་ཡོདཔ་ལས་ འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ ཞི་བདེ་དང་བདེ་སྐྱིད་འབྱུང་ནི་ལུ་ཡང་བཀག་ཡོདཔ་ཨིན་རུང་ མི་དབང་མཆོག་གིས་ དུས་ཉིན་ཚན་རྟག་ཏུ་རྒྱལ་ཁབ་དང་མི་སེར་གྱི་དོན་ལུ་དང་ ལྷག་པར་དུ་ རྒྱལ་ཡོངས་གཅིག་མཐུན་དང་ གཅིག་སྒྲིལ་བཟོ་ཐབས་ལུ་དམིགས་ཏེ་ ཕྱག་ལཱ་མཛད་དེ་བཞུགས་ནུག། (ཀུན་བཟང་ཆོས་འཕེལ། རྣམ་རྒྱལ་ཕུན་ཚོགས། ༢༠༠༩) ནང་ལུ་བཀོད་དེ་ཡོདཔ་ཨིན།<br>
+
+འབྲུག་རྒྱལ་ཁབ་འདི་ ་མི་ལོ་ ༡༣༠༠ དེ་ཅིག་གི་རིང་ལུ་ རང་དབང་རང་བཙན་སྦེ་གནས་ཡོདཔ་ལས་ དུས་ནམ་ར་འབད་རུང་ འབྲུག་མི་གེ་ར་གིས་ དཀའ་ངལ་དང་གདོང་ལེན་འབད་དགོཔ་ག་དེ་ཅིག་འབྱུང་རུང་ རྒྱལ་ཁབ་སྲུང་སྐྱོབ་ཀྱི་དོན་ལུ་འགན་ཁུར་འབག་ནི་དང་ སེམས་ཤུགས་བསྐྱེད་ནི་དེ་ ཁག་ཆེ་ཟེར་གསུངས་ཡོདཔ་ཨིན། འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ རྒྱལ་བརྒྱུད་འཛིན་པའི་རྒྱལཔོ་ག་བྱོན་ཏེ་འབད་རུང་ ག་ཅི་དེ་ལེགས་ཤོམ་སྦེ་ བདག་འཛིན་འཐབ་གནང་ཡོད་མི་དེ་ ག་ཅི་དེ་གཅེས་གཅེས་ཕངས་ཕངས་ཀྱི་སྒོ་ལས་ བདག་འཛིན་འཐབ་ནི་དེ་འབྲུག་མི་རེ་རེ་ལུ་ འགན་ཁུར་སྤྲོད་གནང་ཡོདཔ་ཨིན། དེ་མ་ཚད་མི་དབང་མཆོག་གིས་ གསུངས་མི་ནང་ དུས་ནམ་ར་འབད་རུང་ གཞུང་དང་མི་སེར་གཉིས་ ལཱ་གཅིག་སྒྲིལ་གྱི་ཐོག་ལས་འབད་བ་ཅིན་ ངོ་ལོག་རྐྱབ་མི་ས་ཡ་ལྷགཔ་སྦེ་འོང་རུང་ གདོང་ལེན་འབད་ཚུགས་པའི་ནུས་པ་ཡོད་པའི་སྐོར་ལས་ཡང་གསུངས་་ཡོདཔ་ཨིན། (Sonam Kinga, 2009).<br>
+
+མཇུག་ར་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ དུས་ཡུན་ཐུང་ཀུ་ཅིག་གི་རིང་ལུ་ དཀའ་ངལ་ཐོན་ཏེ་ར་འབད་རུང་ ཡུན་མ་རིངམ་ཅིག་ཁར་ མི་དབང་མཆོག་གིས་ རྒྱལ་ཁབ་གཅིག་ནང་མི་ངོ་གཅིག་ཟེར་བའི་དགོངས་དོན་ལས་བརྟེན་ རང་དབང་གི་ཁུར་ཆ་འབག་ནིའི་གོ་སྐབས་ཐོབ་ཡོདཔ་ཨིན། ལྷོ་མཚམས་ཁ་ཐུག་ལུ་ངོ་ལོགཔ་ཐོན་ཏེ་ སྟབས་མ་བདེཝ་ཐོན་ཡོད་རུང་ དུས་ཡུན་མ་རིང་པའི་གོང་ལས་ མི་སེར་གཅིག་མཐུན་གྱི་སྒོ་ལས་ དཀའ་ངལ་ཚུ་བསལ་ཚུགས་ཡོདཔ་ལས་ དུས་ནམ་ར་འབད་རུང་ རྒྱལ་ཁབ་གཅིག་གི་མི་སེར་འབདཝ་ལས་ མནོ་བསམ་གཅིག་ཁར་གཏང་ ལགཔ་གཅིག་ཁར་མཐུད་དེ་ ལཱ་མཐུན་འབྲེལ་གྱི་སྒོ་ལས་ འབད་དགོཔ་ཁག་ཆེཝ་ཨིན། རྒྱལ་ཁབ་གཅིག་ནང་གནས་ཏེ་ཡོདཔ་ལས་ ཕྱོགས་སོ་སོ་སྦེ་དབྱེ་བ་ཕྱེ་ནི་དང་ ཁ་སྐད་མ་འདྲཝ་ཡོད་པའི་ངོ་བོ་ལུ་ སོ་སོ་ཁ་འབྲལ་ནི་མེན་པར་ གཅིག་ཨིན་པའི་བསམ་པ་བསྐྱེད་དེ་ རྒྱལ་ཁབ་རང་དབང་ལུ་བརྩོན་དགོཔ་ག་ཅི་དེ་ཁག་ཆེཝ་ཨིན། སྤྱི་ལོ་ ༢༠༠༣ ལོའི་ནང་ལུ་ཡང་ རྒྱལ་ཁབ་ནང་ལུ་སྟབས་མ་བདེ་བའི་རྐྱེན་བྱུང་ཡོད་རུང་ འབྲུག་པའི་མི་སེར་ཚུ་ ག་དེ་དྲག་དྲག་མནོ་ཤེས་བསམ་ཤེས་ཀྱི་སྒོ་ལས་ ཞབས་ཏོག་དང་འགན་ཁུར་འབག་ནི་དང་ ཁས་བླངས་འབད་ནི་དེ་གིས་ ཧེ་མ་ག་ཨིནམ་སྦེ་ར་ དགའ་དགའ་སྤྲོ་སྤྲོ་གི་ངང་ལུ་ དམག་ལས་རྒྱལ་ཁ་ཐོབ་སྟེ་ རང་དབང་གི་ཐོག་ལུ་གནས་པའི་གོ་སྐབས་ཤར་ཡོདཔ་ཨིན། (Karma Phuntsho, 2013).</big>
+
+=== རྒྱལ་ཁབ་ཀྱི་རང་བཙན་སྲུང་སྐྱོབ། ===
+<big>༉ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ བྱམས་པ་དང་བརྩེ་བའི་ཐུགས་སྨོན་ལས་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་འདི་ དགའ་སྐྱིད་དང་ཞི་བདེའི་དཔལ་ལུ་ལོངས་སྤྱོད་དེ་ ཕུན་སུམ་ཚོགས་པའི་དུས་ལུ་ རྣམ་རྟོག་མེད་པའི་རི་ལས་ དཔྱད་རིག་མེད་པའི་ཆརཔ་བཟུམ་ བསམ་པ་ལོག་ལྟ་སྐྱེད་མི་ཚུ་གིས་ སྤྱི་ལོ་ ༡༩༨༩ ལུ་ དཔྱད་རིག་རྣམ་རྟོག་མེད་པར་ ངོ་ལོག་ནིའི་འཆར་གཞི་བརྩམས་ཏེ་ གྲ་སྒྲིག་འབད་མི་དེ་ཚུ་ལུ་ མི་དབང་མཆོག་གིས་ ཉེས་ཁྲིམས་དགོངས་ཡངས་གནང་རུང་ བཀྲིན་དགའ་ཚོར་བསམ་ནི་ཕར་བཞག་ ཐ་ན་ཆུའི་ནང་མཛུབ་མོ་བཙུགས་པའི་ ཤུལ་ར་མེདཔ་བཟུམ་སྦེ་ ངོ་ལོག་གི་ལཱ་འབད་ནི་འགོ་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༩༩༠ ཟླ་ ༩ པའི་ཚེས་ ༡༩ ལས་ ངོ་ལོགཔ་ཚུ་གིས་ མི་སྡེ་ལུ་ མཁོ་ཆེ་བའི་གཞི་རྟེན་མཐུན་རྐྱེན་ སློབ་གྲྭ་ སྨན་ཁང་ ལམ་དང་ ཟམ་ཚུ་མེ་སྤར་ བཅག་དཀྲུམ་དང་ བརྡལ་ཤུབས་བཏང་ཡོདཔ་མ་ཚད་ ཉེས་པ་ག་ཅི་ཡང་མེད་པའི་ མི་སེར་མཉམ་ཆུང་ཚུ་ དམར་བསད་དང་འཕྲོག༌བཅོམ༌འབད་བའི་གུར་ ཕ༌མའི༌གདོང༌ཁར༌བུམོ་ཚུ༌ལུ༌ དབང༌བཙོང༌འདོད༌སྤྱོད༌ཚུ་འབད་ནུག། དེ་ལས་ ལྷ༌ཁང༌དང༌སྐུ༌གསུང༌ཐུགས༌རྟེན༌ མང༌རབས༌ཅིག༌མེདཔ་བཏང་ ལ་སོགས་པའི་བྱ་བ་ངན་པ་ལེ་ཤ་འབད་ནུག། (Royal Education Council, 2020)<br>
+
+སྤྱི༌ལོ༌ ༡༩༩༡ ལུ༌ རྒྱལ༌ཡོངས༌ཚོགས༌འདུ༌ཐེངས༌ ༧༠ པའི༌ནང༌ མི༌སེར༌འཐུས༌མི་ཚུ༌གིས༌ གཞུང་རྩ༌བ༌གསུམ༌ལུ༌ ངོ༌ལོག༌མི་ཚུ༌ ཉེས༌ཁྲིམས༌སྲོག་ཐོག་ལུ་བཀལ་ནི་དང༌ ཚེ༌བཙོན༌ནང་གཏང་ནི་ལུ་ ཡངས༌ཆ་མེད་པར་དྲག༌པོའི༌སྒོ༌ལས༌ གོ༌མཚོན༌ལག༌ལེན༌ འཐབ༌དགོཔ༌སྦེ༌ཞུ་ཡོདཔ་ཨིན་རུང་ མི་དབང་མཆོག་གིས་ ངོ༌ལོག༌པའི༌བྱེལཝ༌དེ༌ དྲག༌པོའི༌སྒོ༌ལས༌ མེན༌པར༌ ཞི༌བའི༌ཐོག༌ལས༌འཇོམ༌ཐབས༌ སྒྲིག༌མ༌ཚུགས༌པ༌ཅིན༌ རྒྱལཔོ༌གསེར༌ཁྲི༌གུ་ལས༌ དགོངས༌ཞུ༌མཛད༌ནི༌ཨིན༌པའི༌ ཁས༌བླངས༌ཡང་མཛད༌གནང༌ནུག། སྤྱི་ལོ་ ༡༩༩༢ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཐེངས་ ༧༡ པའི་ནང་རྒྱལ་ཡོངས་སྲུང་སྐྱོབ་ཀྱི་ བཅའ་ཁྲིམས་གསརཔ་ཆ་འཇོག་མཛད་དེ་ ཚེ་བཙོན་ཕོག་མི་ཚུ་ ཉེས་ཁྲིམས་དགོངས་ཡངས་གནང་པའི་ཤུལ་ལས་ ཁྲེལ་དང་ངོ་ཚ་མེད་པར་ རྟ་གསོ་བའི་དྲིན་ལན་རྡོག་ཐལ་དང་། བཟང་ལན་ངན་དང་ཆང་ལན་ཆུ་བྱིན་ཏེ་ དཔྱེ་ངན་སྟོན་མིའི་ ངོ་ལོགཔ་གི་དཀའ་ངལ་ཚུ་ཡང་བསལ་ཏེ་གནང་ཡོདཔ་ཨིན། (དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ་ ༢༠༡༠)<br>
+
+སྐལ་བཟང་ཆོས་འཕེལ། རྣམ་རྒྱལ་ཕུན་ཚོགས། (༢༠༠༩) ལྟར་དུ་འབད་བ་ཅིན་ རྒྱ་གར་གཞུང་ལུ་ ངོ་རྒོལ་འབད་མི་ཨུལ་ཕཱ། བཱོ་དོ། ཀེ་ཨེལ་ཨོ། གཡིབ་དམག་སྡེ་ཚན་ ༣ གྱིས་ འབྲུག་པའི་ས་གནས་ཚུ་ནང་ གནང་བ་མེད་པར་ དབང་བཙོང་གི་ཐོག་ལུ་འཛུལ་ཏེ་ སྡོད་སྒར་བཅགས་སྡོད་རུང་ མི་དབང་མཆོག་གིས་ མ་འོངས་རྒྱལ་ཁབ་ཀྱི་ ཞི་བདེ་ལུ་དམིགས་ཏེ་ གཡིབ་དམག་ཚུ་ལུ་ བཟོད་པ་དང་སྙིང་རྗེ་ཚད་མེདཔ་བསྒོམས་ཏེ་ མིའི་ཚེ་སྲོག་ལུ་བར་ཆད་མི་རྐྱབ་ནི་དང་ རྒྱ་འབྲུག་རྒྱལ་ཁབ་གཉིས་ཀྱི་མཐུན་ལམ་ ཡུན་བརྟན་བཞག་ནིའི་དོན་ལུ་བརྩོན་ཏེ་བཞུགས་ནུག། གཡིབ་དམག་དེ་ཚུ་ རྒྱལ་ཁབ་ནང་ལས་མེདཔ་བཟོ་ནིའི་དོན་ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཐེངས་ ༧༦ པ་ལས་འགོ་བཟུང་ ༨༡ པ་ཚུན་ མི་ལོ་ ༦ གི་རིང་ གཡིབ་དམག་གི་འགོ་དཔོན་ཚུ་དང་གཅིག་ཁར་ གསུང་གྲོས་ག་དེམ་ཅིག་གནང་རུང་ གྲུབ་འབྲས་ལེགས་ཤོམ་བྱུང་མ་ཚུགས་པས། <br>
+
+ངོ་རྒོལ་སྡེ་ཚན་ ༣ གྱིས་ འབྲུག་པའི་རྒྱལ་ཁབ་ རང་དབང་རང་བཙན་ཨིན་པའི་མནོ་བསམ་མེད་པར་ ཨ་རྟག་ར་བྱ་སྤྱོད་ངན་པའི་དམག་གི་སྦྱང་བ་འབད་ནི་དང་ གཞན་བྱ་བ་ངན་པ་མཚམས་ཚོད་མེད་པར་ འཕྲོ་མཐུད་དེ་འབདཝ་ལས་ མི་དབང་མཆོག་གིས་  ཉེན་ཁ་ཅན་གྱི་ས་གནས་ནང་ལས་ཕར་ཞབས་ཀྱི་བཅར་གནང་། གཡིབ་དམག་འགོ་དཔོན་ཚུ་ལུ་ མི་དབང་མཆོག་གི་ཞལ་ལས་ འབྲུག་དང་ཨ་སམ་ནུབ་བེང་གཱོལ་གྱི་མི་སེར་ཚུ་ལུ་ ཧེ་མ་ལས་ད་རེས་ཚུན་ཚོད་ མི་རབས་བརྒྱུད་དེ་མཐུན་ལམ་ཅན་དང་ ཁྱིམ་ཚང་ཐག་ཉེ་ཤོས་ཨིན་ནི་དེ་གིས་ འབྲུག་པའི་དམག་མི་དང་གཡིབ་དམག་སྡེ་ཚན་ ༣ གྱི་བར་ན་ གཅིག་གིས་གཅིག་ལུ་ ངལ་མ་རངམ་ག་ནི་ཡང་མེདཔ་ལས་ དྲག་པོའི་ཐོག་ལས་དམག་རྐྱབ་ནི་མེན་པར་ ཞི་བའི་ཐོག་ལས་ འབྲུག་པའི་ས་ཁོངས་ནང་ལས་སྡོད་སྒར་ཚུ་ སྤོ་བཤུད་འབད་བ་ཅིན་ རྒུད་འཐུས་གནང་ནི་གི་ཞལ་གྱིས་་ཡང་བཞེས་ནུག། གཡིབ་དམག་ཚུ་ལུ་ཡང་ དགྲ་བྱང་ཕྱད་སྦེ་མེན་པར་ ཕམ་དང་བུ་གཞིའི་འདུ་ཤེས་དང་བརྩེ་གདུང་གནང་སྟེ་ ཐུགས་བསྐྱེད་བཟང་པོའི་བཀའ་རྒྱ་ ག་དེམ་ཅིག་གནང་རུང་ གཡིབ་དམག་ཚུ་གི་རྣ་བར་ རྡོ་གུར་ཆུ་བླུགས་བླུགསཔ་བཟུམ་སྦེ་ ཉན་ཁུག་ར་བཏབ་མ་བཏུབ་པས། <br>
+
+སྐལ་བཟང་ཆོས་འཕེལ། རྣམ་རྒྱལ་ཕུན་ཚོགས། (༢༠༠༩) དང་ཁྲིལ་བ་ཅིན་ གཡིབ་དམག་འགོ་དཔོན་ཚུ་གི་ཧོངས་ལས་ འབྲུག་གཞུང་དང་རྒྱ་གར་གཞུང་གཉིས་ཀྱི་མཐུན་ལམ་དེ་ མི་ལོ་ ༥༠ ལྷག་ཙམ་དང་ ཨ་སམ་ ནུབ་བེང་གཱོལ་མངའ་སྡེ་གཉིས་དང་ འབྲུག་པའི་མི་སེར་གྱི་བར་ན་ལུ་ཡོད་པའི་མཐུན་ལམ་དེ་ མི་ལོ་སྟོང་ཕྲག་ལས་ལྷག་སྟེ་ཡོད་མི་དེ་གཉིས་ ག་དྲག་ག་གཟིགས་ཏེ་ཐུགས་ཐག་བཅད་གནང་མི་དེ་ལུ་ མ་འཐུསཔ་མེད་པའི་གཏམ་གྱི་མཐའ་ཚིག་ཞུ་སྟེ་ ཚར་གཅིག་འབྲུག་རྒྱལ་ཁབ་ནང་ལས་ ཕྱི་ཁར་ཐོན་ཏེ་འགྱོ་རུང་ ལོག་སྟེ་ར་འབྲུག་གི་ས་ཁོངས་ནང་ལུ་ རང་འཇགས་འཛུལ་ནི་ཨིན་པའི་ བཙན་ཚིག་ཡང་ཞུ་ཡོདཔ་ཨིན། <br>
+
+མི་དབང་མཆོག་གིས་རྒྱལ་ཁབ་རང་དབང་དང་ མི་སེར་གྱི་དགའ་སྐྱིད་ཀྱི་ཐོག་ལུ་དམིགས་ཏེ་ སྤྱི་ལོ་ ༢༠༠༣ ཟླ་ ༧ པའི་ཚེས་ ༡༤ ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཆེན་མོ་ཐེངས་ ༨༡ གི་ནང་ ཚོགས་ཁང་སྒོ་བསྡམས་ཏེ་ གསང་བའི་གསུང་གྲོས་གནང་ཞིནམ་ལས་ ཚོགས་འདུ་ཆེན་མོ་གིས་ དྲག་དམག་ལག་ལེན་འཐབ་དགོཔ་སྦེ་གྲོས་ཆོད་གནང་ ལྷན་རྒྱས་གཞུང་ཚོགས་ལས་ དྲག་དམག་འགོ་བཙུགས་ཆོགཔ་སྦེ་གྲོས་ཆོད་ཕུལ་ནུག། གཡིབ་དམག་ཚུ་དང་གཅིག་ཁར་ བྱ་ཐབས་མེད་པར་གདོང་ལེན་འབད་དགོཔ་ཐོནམ་ལས་ ཐུགས་ཕམ་སྦོམ་ཡོད་པའི་བཀའ་རྒྱ་ཚུ་ཡང་ འབྲུག་གཞུང་དང་མི་སེར་ཡོངས་ལུ་གནང་ནུག། རྒྱལ་ཁབ་ཀྱི་སྲུང་སྐྱོབ་དང་མི་སེར་གྱི་མཐའ་དོན་ལུ་ ཉིན་ནུབ་མེད་པར་ཕྱག་ལཱ་གནང་བའི་དུས་ཚོད་དེ་ཁར་ ཆོས་ཕྱོགས་དང་ ལྷག་པར་དུ་ མི་དབང་མཆོག་གི་ རྒྱལ་ཡུམ་གྱི་གཙོས་པའི་ ཚེ་སྔོན་ལས་ཀྱིས་བཀོད་པའི་ རྒྱལ་བཙུན་སྐུ་འཁོར་ལྷན་རྒྱས་དང་ དད་དམ་ཅན་གྱི་མི་སེར་ག་ར་ འབྲུག་མི་ཡོངས་ཀྱི་སྐྱབས་མགོན་ སྤྱི་གཙུག་སྦུག་གི་ཉི་ཟླ་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གི་སྐུ་ཚེ་ལུ་ བར་རྐྱེན་མི་འབྱུང་ག་མནོ་བའི་ཚ་གྱང་ གནམ་མེད་ས་མེད་ཕོག་ནུག།  <br>
+                          
+ཨིན་རུང་མི་དབང་མཆོག་ལུ་ ག་དེ་ཅིག་ཞུ་རུང་གསན་མ་བཏུབ་པར་ མི་དབང་བརྒྱུད་འཛིན་རྒྱལ་སྲས་ དྲགོས་འཇིགས་མེད་གེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་མཆོག་ མི་སེར་གྱི་མཐའ་དོན་དང་ སྐྱིད་སྡུག་གཟིགས་མིའི་རྒྱལ་ཚབ་སྦེ་ ཐིམ་ཕུག་ལུ་བཞག་གནང་ནུག། སྤྱི་ལོ་ ༢༠༠༣ ཟླ་ ༡༢ པའི་ཚེས་ ༢ ལུ་ སྤུངས་ཐང་བདེ་ཆེན་ཕོ་བྲང་མ་ཆེན་ལྷ་ཁང་ གཏེར་སྟོན་པདྨ་གླིང་པ་ ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་ སྲས་འཇམ་དཔལ་རྡོ་རྗེ་ ལ་སོགས་པ་ཚུ་གི་སྐུ་མདུན་ལས་ རྒྱལ་ཁབ་ལུ་གནོད་འཚུབས་ཡོད་མེད་ཀྱི་བརྟག་པ་ཞུཝ་ད་ གནོད་འཚུབས་མེད་པའི་ཐུགས་བརྟག་གནང་ཡོདཔ་ཨིན། ལྷག་པར་དུ་ མགོན་ཁང་ཆེན་པོའི་ནང་ལུ་ དཔལ་ཡེ་ཤེས་ཀྱི་མགོན་པོ་ ལས་མགོན་བྱ་རོག་གདོང་ཅན་ དཔལ་ལྡན་དུད་སོལ་ལྷ་མོ་ བཀའ་སྲུང་ཆོས་སྐྱོང་མའི་སྐུ་མདུན་ལས་ བཟང་ངན་གྱི་བརྟག་པའི་དོན་ལུ་ཤོ་ཞུ་རུང་ ཉེན་ཁ་མེདཔ་སྦེ་གནངམ་ལས་ སྤྱི་ཟླ་ ༡༢ པའི་ཚེས་ ༣ གྱི་དྲོ་པ་ སྤུ་ན་ཁ་འཛོམས་ཐང་ཁ་ལུ་ མ་ནི་དང་དུང་སྒྲུབ་གནང་སའི་ མཆོད་ཁང་ནང་དཀར་མེ་ཕུལ་ ཐུགས་སྨོན་གནང་སྟེ་ མི་དབང་རྒྱལ་པོའི་སྲས་དྲགོས་ འཇིགས་རྒྱལ་ ཨྱོན་དབང་ཕྱུག་དང་མི་དབང་མཆོག་ དགེ་ལེགས་ཕུ་ལུ་བྱོན་ནུག།<br>
+
+བཤད་སྲོལ་ལྟར་འབད་བ་ཅིན་ ཆོས་སྐྱོང་སྲུང་མ་གིས་སྡོང་གྲོགས་མཛད་པའི་ཁར་ མི་དབང་མཆོག་ཡང་ག་ནི་བ་ཤེས་རབ་ཅན་གྱི་ གང་ཟག་ཁྱད་དུ་འཕགས་པ་ཅིག་དང་ དམག་མི་ཚུ་ཡང་སྙིང་སྟོབས་ཅན་དང་ འབྲུག་པའི་མི་སེར་རྣམས་ ཁ་རྗེ་བཟངམ་ལས་བརྟེན་ གཡིབ་དམག་ཚུ་ལས་རྒྱལ་ཁ་ཐོབ་ དཔལ་ལྡན་འབྲུག་པ་རྒྱལ་ལོ་ཟེར་ ཕྱོགས་ལས་རྣམ་པར་རྒྱལ་བའི་འབྲུག་རིས་ཅན་གྱི་རྒྱལ་དར་ འགྱུར་བ་མེད་པར་ནམ་མཁའི་དབྱིངས་ལུ་འཕྱར་ཏེ་ སྨན་ལྗོངས་འབྲུག་གི་རྒྱལ་ཁབ་སྔར་ལས་ལྷག་པའི་ རང་བཙན་བདེ་སྲུང་གི་གཞི་འགྱམ་ སྒྲིང་སྒྲི་སྦེ་བཙུགས་ཏེ་གནང་བའི་ཉིནམ་ སྤྱི་ལོ་ ༢༠༠༣ ཟླ་ ༡༢ པའི་ཚེས་ ༡༥ དེ་ འབྲུག་མི་ཡོངས་ཀྱིས་མི་རབས་བརྒྱུད་དེ་ དུས་ནམ་ཡང་སེམས་ཁ་ལས་མ་བརྗེད་པར་ རང་གི་སྲོག་ལས་ལྷག་པའི་བཀྲིན་རྗེས་སུ་དྲན་དགོཔ་ཨིན། 
+</big>
 
 === ཁུངས་གཏུག། ===
 # སྐལ་བཟང་ཆོས་འཕེལ། རྣམ་རྒྱལ་ཕུན་ཚོགས། (༢༠༠༩) འབྲུག་གི་ནོར་བུ། རྡོར་གླིང་གྲོས་ཚོགས།
@@ -124,4 +200,6 @@
 # Phuntsho, k. (2013). History of Bhutan, Random House Publishers India Private Limited.
 # Kinga, S. (2009). Polity of Kingship and Democracy, Ministry of Education, Royal Government of Bhutan.
 # Phuntsho Rabten, (n.d), Mass Media: Its Consumption and Impact on Residents of Thimphu and Rural Areas. Thimphu, Center for Bhutan Studies.
+# Wangchuk, L. (2017). Facts about Bhutan the Land of Thunder Dragon. KMT Publishers. 
+# Rabten, P. (n.d). Mass Media: Its Consumption and Impact on Residents of Thimphu and Rural Areas. Thimphu, Center for Bhutan Studies.
 # Royal Education Council, (2020). History of Bhutan; course book for class X, Royal Government of Bhutan, Paro.
